syntax ="proto3";

package  usersproto;

option java_package = "com.grpc.usersproto";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

service UserService {
  rpc postUser(UserPostReq) returns (UserPostRes) ;
  rpc getUser(UserGetReq) returns (UserGetRes) ;
}
message UserPostReq{
  int32 userName=1;
  int32 userPhoneNo=2;
  int32 userBalance=3;
}
message UserPostRes{
  string userMsg=1;
}
message UserGetReq{
  int32 userPhoneNo=1;
}
message UserGetRes{
  int32 userBalance=1;
}